--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 	<section class="header">
 			<div class="bg">
-				<div class="container">
+				<div class="contaiier">
 					<div class="row">
 						<div class="col-12">
 							<nav class="navbar navbar-expand-lg navbar-light">
